# hexpat

./: Makefile  Raw.chs  boring  hexpat.cabal  lazySAX.hs  lazySax.hs  lazyTree.hs  perf.hs  test.hs  test.xml  test2.hs
Text/XML/Expat/: Annotated.hs  Cursor.hs  Extended.hs  Format.hs  IO.chs  IO.hs  Namespaced.hs  NodeClass.hs  Proc.hs  Qualified.hs  Raw.chs  SAX.hs  Stream.hs  Tree.hs
Text/XML/Expat/Internal/: DocumentClass.hs  Glue.c  IO.hs  Namespaced.hs  NodeClass.hs  Qualified.hs
cbits/: xmlparse.c
test/: Makefile  ROADS.xml  benchmark.hs  cabal.project  dealloc.hs  eachTagStrategy.hs  errorHandlingWay1.hs  errorHandlingWay2.hs  helloworld.hs  hexpat-tests.cabal  lazySAX.hs  lazyTree.hs  lazyTreeThrow.hs  leak.hs  locations.hs  perf.hs  qualifiedByFlavorAndTransformer.hs  readRoads.hs  roundtrip.hs  runTestsAndCoverage.sh  test2.hs  tests.hs
test/hexpat-leak/: Parse.hs  build.sh  instant-message.llsd  run.sh
test/suite/: TestSuite.hs
test/suite/Text/XML/Expat/: ParallelTest.hs  ParseFormat.hs  Tests.hs  UnitTests.hs
test/suite/Text/XML/Expat/Cursor/: Tests.hs
test/suite/Text/XML/Expat/Proc/: Tests.hs
test/thread-leak/: build.sh  callme.c  clean.sh  thread-leak.hs
