Cabal-Version: >= 1.2
Name: hexpat
Version: 0.4
Synopsis: wrapper for expat, the fast XML parser
Description:
  Expat (<http://expat.sourceforge.net/>) is a stream-oriented XML parser
  written in C.
  .
  This package provides a Haskell binding for Expat, with a choice of tree or
  SAX-style representation, and it includes an XML formatter.  It is extensible
  to any string type, with String, ByteString and Text provided out of the box.
  .
  The emphasis is on speed and simplicity.
  .
  Benchmark results against HaXml for parsing a 4K xml file with non-threading runtime:
  HAXML: 2688 us, HEXPAT: low-level parse-no tree: 250 us, lazy-String: 1262 us,
  lazy-Text: 785 us, strict-String: 1297 us, strict-Text: 852 us
  .
  With -threaded note lazy performance is bad (better with larger block sizes):
  HAXML: 2723 us, HEXPAT: low-level parse-no tree: 484 us,
  lazy-String: 5130 us, lazy-Text: 3720 us, strict-String: 1601 us,
  strict-Text: 1144 us
Category: XML
License: BSD3
License-File: LICENSE
Author: Evan Martin, Stephen Blackheath
Maintainer: http://blacksapphire.com/antispam/
Copyright:
  (c) 2008 Evan Martin <martine@danga.com>,
  (c) 2009 Stephen Blackheath <http://blacksapphire.com/antispam/>
Homepage: http://code.haskell.org/hexpat/
Extra-Source-Files:
  test/tests.hs,
  test/perf.hs,
  test/test.xml,
  test/benchmark.hs,
  test/lazySAX.hs,
  text/lazyTree.hs
Build-Type: Simple
Stability: beta

Library
  Build-Depends:
    base,
    haskell98,
    bytestring,
    mtl >= 1.1.0.0,
    text >= 0.1,
    binary >= 0.4,
    utf8-string >= 0.3.3,
    parallel
  Exposed-Modules:
    Text.XML.Expat.Tree,
    Text.XML.Expat.Format,
    Text.XML.Expat.Qualified,
    Text.XML.Expat.IO
  Other-Modules:
    C2HS
  Extensions: ForeignFunctionInterface
  Extra-Libraries: expat

