Cabal-Version: >= 1.4
Name: hexpat-tests
Version: 0.11
Build-Type: Simple

Executable testsuite
  hs-source-dirs:  .. suite
  main-is:         TestSuite.hs

  extra-libraries: expat

  build-depends:
    HUnit < 1.3,
    QuickCheck >= 2.1.0.3 && < 2.2,
    base >= 3 && < 5,
    bytestring,
    containers,
    extensible-exceptions >= 0.1 && < 0.2,
    haskell98,
    transformers,
    deepseq >= 1.1.0.0,
    parallel == 3.1.*,
    test-framework == 0.3.*,
    test-framework-hunit == 0.2.*,
    test-framework-quickcheck2 == 0.2.*,
    text >= 0.5,
    utf8-string >= 0.3.3,
    List >= 0.4,
    monads-fd,
    random

  ghc-options: -Wall -fhpc -threaded
  if impl(ghc >= 6.8)
    ghc-options: -fwarn-tabs
