Cabal-Version: >= 1.4
Name: hexpat-tests
Version: 0.11
Build-Type: Simple

Executable testsuite
  hs-source-dirs:  suite
  main-is:         TestSuite.hs

  build-depends:
    HUnit < 1.3,
    QuickCheck == 2.4.*,
    base >= 3 && < 5,
    bytestring,
    containers,
    transformers,
    deepseq >= 1.1.0.0,
    parallel >= 3.1.0.0 && < 3.3.0.0,
    test-framework > 0.3.0,
    test-framework-hunit == 0.2.*,
    test-framework-quickcheck2 == 0.2.*,
    text >= 0.5,
    utf8-string >= 0.3.3,
    List >= 0.4.2,
    mtl,
    random,
    hexpat

  ghc-options: -Wall -fhpc -threaded
